WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279276
input 'week' may display the wrong date when the first week or last week of a year is selected
https://bugs.webkit.org/show_bug.cgi?id=279276
Summary
input 'week' may display the wrong date when the first week or last week of a...
Lily Spiniolas
Reported
2024-09-06 12:22:00 PDT
input 'week' may display the wrong date when the first week or last week of a year is selected depending on user locale, timezone, and characteristics of the year (such as the number of days in the year, the first weekday, etc)
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2024-09-06 12:22:42 PDT
rdar://132954506
Radar WebKit Bug Importer
Comment 2
2024-09-06 12:22:49 PDT
<
rdar://problem/135434152
>
Lily Spiniolas
Comment 3
2024-09-06 12:41:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33256
EWS
Comment 4
2024-09-10 11:05:56 PDT
Committed
283427@main
(0bb11f0f467f): <
https://commits.webkit.org/283427@main
> Reviewed commits have been landed. Closing PR #33256 and removing active labels.
EWS
Comment 5
2024-09-11 14:23:19 PDT
Committed
283286.14@safari-7620-branch
(d2d99c3d41fb): <
https://commits.webkit.org/283286.14@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1728 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug