input 'week' may display the wrong date when the first week or last week of a year is selected https://bugs.webkit.org/show_bug.cgi?id=279276 rdar://132954506

Reviewed by Aditya Keerthi.

The 'week' input could show the wrong week number and/or year number depending on the first weekday of the selected year and the number of weeks in that year according to ISO-8601. A related issue could also cause the wrong week to appear as selected when reopening the calendar view after selecting a week depending on the user's locale, timezone, and the number of ISO-8601 weeks in that year.

The first issue was resolved by constructing a displayed string which directly uses DateComponents rather than using NSDateFormatter.

The second issue was resolved by updating the formatter used to calculate the initial value for input "week" to interpret the parsed date as having a time of 00:00 in the user's own timezone, preventing cases where timezone adjustments could cause the date to be interpreted as the day previous to the correct one.

* Source/WebCore/platform/text/cocoa/LocaleCocoa.mm:
(WebCore::LocaleCocoa::formatDateTime):
* Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm:
(-[WKDateTimePicker iso8601DateFormatterForCalendarView]):
(-[WKDateTimePicker setWeekPickerToInitialValue]):

Canonical link: https://commits.webkit.org/283427@main